hphp/hack/test/typecheck/expression_trees/async_function.php.like_types.exp
File "async_function.php", line 17, characters 22-28:
Typing error (Typing[4110])
  File "async_function.php", line 17, characters 22-28:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "async_function.php", line 16, characters 8-28:
  But got `dynamic`
